--- a/01-Fundamentals-Part-1/Project/index.html
+++ b/01-Fundamentals-Part-1/Project/index.html
@@ -10,6 +10,6 @@
     <body>
         <!-- code -->
         <h1>JavaScript Fundamentals – Part 1</h1>
-        <script src="./script/script.js" async></script>
+        <script src="./script/script.js" defer></script>
     </body>
 </html>
