--- a/00-Practice/coding_challenge_4/index.html
+++ b/00-Practice/coding_challenge_4/index.html
@@ -5,44 +5,42 @@
         <meta name="author" content="Abhishek Soren" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="./style/main.css" />
-        <title>Coding Challenge #1</title>
+        <title>Coding Challenge #4</title>
     </head>
     <body>
         <!-- code -->
         <div>
-            <h1>Coding Challenge #1</h1>
+            <h1>Coding Challenge #4</h1>
             <p>
-                Mark and John are trying to compare their BMI (Body Mass Index), which is calculated
-                using the formula:
-            </p>
-            <p>
-                BMI = mass / height ** 2 = mass / (height * height) (mass in kg and height in
-                meter).
+                Steven wants to build a very simple tip calculator for whenever he goes eating in a
+                restaurant. In his country, it's usual to tip 15% if the bill value is between 50
+                and 300. If the value is different, the tip is 20%.
             </p>
 
             <h2>Your tasks:</h2>
             <ol>
-                <li>Store Mark's and John's mass and height in variables</li>
                 <li>
-                    Calculate both their BMIs using the formula (you can even implement both
-                    versions)
+                    Calculate the tip, depending on the bill value. Create a variable called 'tip'
+                    for this. It's not allowed to use an if/else statement (If it's easier for you,
+                    you can start with an if/else statement, and then try to convert it to a ternary
+                    operator!)
                 </li>
                 <li>
-                    Create a Boolean variable 'markHigherBMI' containing information about whether
-                    Mark has a higher BMI than John.
+                    Print a string to the console containing the bill value, the tip, and the final
+                    value (bill + tip). Example: “The bill was 275, the tip was 41.25, and the total
+                    value 316.25”
                 </li>
             </ol>
 
             <h2>Test data:</h2>
             <ul>
-                <li>
-                    Data 1: Marks weights 78 kg and is 1.69 m tall. John weights 92 kg and is 1.95 m
-                    tall.
-                </li>
-                <li>
-                    Data 2: Marks weights 95 kg and is 1.88 m tall. John weights 85 kg and is 1.76 m
-                    tall.
-                </li>
+                <li>Data 1: Test for bill values 275, 40 and 430</li>
+            </ul>
+
+            <h2>Hints:</h2>
+            <ul>
+                <li>To calculate 20% of a value, simply multiply it by 20/100 = 0.2</li>
+                <li>Value X is between 50 and 300, if it's >= 50 && &lt;= 300</li>
             </ul>
 
             <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
