--- a/00-Practice/coding_challenge_5/index.html
+++ b/00-Practice/coding_challenge_5/index.html
@@ -9,44 +9,57 @@
     </head>
     <body>
         <!-- code -->
-        <div>
-            <h1>Coding Challenge #1</h1>
-            <p>
-                Mark and John are trying to compare their BMI (Body Mass Index), which is calculated
-                using the formula:
-            </p>
-            <p>
-                BMI = mass / height ** 2 = mass / (height * height) (mass in kg and height in
-                meter).
-            </p>
+        <h1>JavaScript Fundamentals – Part 2</h1>
+        <h2>Coding Challenge #1</h2>
 
-            <h2>Your tasks:</h2>
+        <p>
+            Back to the two gymnastics teams, the Dolphins and the Koalas! There is a new gymnastics
+            discipline, which works differently.<br />
+            Each team competes 3 times, and then the average of the 3 scores is calculated (so one
+            average score per team).<br />
+            A team <strong>only</strong> wins if it has at least <strong>double</strong> the average
+            score of the other team.<br />
+            Otherwise, no team wins!
+        </p>
+
+        <div class="task">
+            <h3>Your tasks:</h3>
             <ol>
-                <li>Store Mark's and John's mass and height in variables</li>
+                <li>Create an arrow function 'calcAverage' to calculate the average of 3 scores</li>
+                <li>Use the function to calculate the average for both teams</li>
                 <li>
-                    Calculate both their BMIs using the formula (you can even implement both
-                    versions)
+                    Create a function 'checkWinner' that takes the average score of each team as
+                    parameters ('avgDolphins' and 'avgKoalas'), and then logs the winner to the
+                    console, together with the victory points, according to the rule above.<br />
+                    Example: "Koalas win (30 vs. 13)"
                 </li>
                 <li>
-                    Create a Boolean variable 'markHigherBMI' containing information about whether
-                    Mark has a higher BMI than John.
+                    Use the 'checkWinner' function to determine the winner for both Data 1 and Data
+                    2
                 </li>
+                <li>Ignore draws this time</li>
             </ol>
+        </div>
 
-            <h2>Test data:</h2>
+        <div class="test-data">
+            <h3>Test data:</h3>
             <ul>
+                <li>Data 1: Dolphins score 44, 23 and 71. Koalas score 65, 54 and 49</li>
+                <li>Data 2: Dolphins score 85, 54 and 41. Koalas score 23, 34 and 27</li>
+            </ul>
+        </div>
+
+        <div class="hints">
+            <h3>Hints:</h3>
+            <ul>
+                <li>To calculate average of 3 values, add them all together and divide by 3</li>
                 <li>
-                    Data 1: Marks weights 78 kg and is 1.69 m tall. John weights 92 kg and is 1.95 m
-                    tall.
-                </li>
-                <li>
-                    Data 2: Marks weights 95 kg and is 1.88 m tall. John weights 85 kg and is 1.76 m
-                    tall.
+                    To check if number A is at least double number B, check for \( A \geq 2 * B \).
+                    Apply this to the team's average scores 😊
                 </li>
             </ul>
-
-            <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
         </div>
+        <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
 
         <script src="./script/script.js" async></script>
     </body>
