--- a/00-Practice/coding_challenge_2/index.html
+++ b/00-Practice/coding_challenge_2/index.html
@@ -9,14 +9,15 @@
     </head>
     <body>
         <!-- code -->
-        <div>
-            <h1>Coding Challenge #2</h1>
-            <p>
-                Use the BMI example from Challenge #1, and the code you already wrote, and improve
-                it.
-            </p>
+        <h1>JavaScript Fundamentals – Part 1</h1>
+        <h2>Coding Challenge #2</h2>
 
-            <h2>Your tasks:</h2>
+        <p>
+            Use the BMI example from Challenge #1, and the code you already wrote, and improve it.
+        </p>
+
+        <div class="task">
+            <h3>Your tasks:</h3>
             <ol>
                 <li>
                     Print a nice output to the console, saying who has the higher BMI. The message
@@ -28,11 +29,16 @@
                     "Mark's BMI (28.3) is higher than John's (23.9)!"
                 </li>
             </ol>
-
-            <p><em>Hint:</em> Use an if/else statement</p>
-
-            <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
         </div>
+
+        <div class="hints">
+            <h3>Hint:</h3>
+            <ul>
+                <li>Use an if/else statement 😊</li>
+            </ul>
+        </div>
+
+        <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
 
         <script src="./script/script.js" async></script>
     </body>
