--- a/00-Practice/coding_challenge_1/index.html
+++ b/00-Practice/coding_challenge_1/index.html
@@ -9,44 +9,7 @@
     </head>
     <body>
         <!-- code -->
-        <div>
-            <h1>Coding Challenge #1</h1>
-            <p>
-                Mark and John are trying to compare their BMI (Body Mass Index), which is calculated
-                using the formula:
-            </p>
-            <p>
-                BMI = mass / height ** 2 = mass / (height * height) (mass in kg and height in
-                meter).
-            </p>
-
-            <h2>Your tasks:</h2>
-            <ol>
-                <li>Store Mark's and John's mass and height in variables</li>
-                <li>
-                    Calculate both their BMIs using the formula (you can even implement both
-                    versions)
-                </li>
-                <li>
-                    Create a Boolean variable 'markHigherBMI' containing information about whether
-                    Mark has a higher BMI than John.
-                </li>
-            </ol>
-
-            <h2>Test data:</h2>
-            <ul>
-                <li>
-                    Data 1: Marks weights 78 kg and is 1.69 m tall. John weights 92 kg and is 1.95 m
-                    tall.
-                </li>
-                <li>
-                    Data 2: Marks weights 95 kg and is 1.88 m tall. John weights 85 kg and is 1.76 m
-                    tall.
-                </li>
-            </ul>
-
-            <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
-        </div>
+        <h1>JavaScript Fundamentals – Part 1</h1>
 
         <script src="./script/script.js" async></script>
     </body>
