--- a/00-Practice/coding_challenge_4/index.html
+++ b/00-Practice/coding_challenge_4/index.html
@@ -9,14 +9,16 @@
     </head>
     <body>
         <!-- code -->
-        <div>
-            <h1>Coding Challenge #4</h1>
-            <p>
-                Steven wants to build a very simple tip calculator for whenever he goes eating in a
-                restaurant. In his country, it's usual to tip 15% if the bill value is between 50
-                and 300. If the value is different, the tip is 20%.
-            </p>
+        <h1>JavaScript Fundamentals – Part 1</h1>
+        <h1>Coding Challenge #4</h1>
 
+        <p>
+            Steven wants to build a very simple tip calculator for whenever he goes eating in a
+            restaurant. In his country, it's usual to tip 15% if the bill value is between 50 and
+            300. If the value is different, the tip is 20%.
+        </p>
+
+        <div class="task">
             <h2>Your tasks:</h2>
             <ol>
                 <li>
@@ -27,25 +29,28 @@
                 </li>
                 <li>
                     Print a string to the console containing the bill value, the tip, and the final
-                    value (bill + tip). Example: “The bill was 275, the tip was 41.25, and the total
-                    value 316.25”
+                    value (bill + tip). Example: "The bill was 275, the tip was 41.25, and the total
+                    value 316.25"
                 </li>
             </ol>
+        </div>
 
+        <div class="test-data">
             <h2>Test data:</h2>
             <ul>
                 <li>Data 1: Test for bill values 275, 40 and 430</li>
             </ul>
+        </div>
 
+        <div class="hints">
             <h2>Hints:</h2>
             <ul>
                 <li>To calculate 20% of a value, simply multiply it by 20/100 = 0.2</li>
-                <li>Value X is between 50 and 300, if it's >= 50 && &lt;= 300</li>
+                <li>Value X is between 50 and 300, if it's >= 50 && <= 300</li>
             </ul>
-
-            <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
         </div>
 
+        <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
         <script src="./script/script.js" async></script>
     </body>
 </html>
