--- a/00-Practice/coding_challenge_1/index.html
+++ b/00-Practice/coding_challenge_1/index.html
@@ -10,6 +10,45 @@
     <body>
         <!-- code -->
         <h1>JavaScript Fundamentals – Part 1</h1>
+        <h2>Coding Challenge #1</h2>
+
+        <p>
+            Mark and John are trying to compare their BMI (Body Mass Index), which is calculated
+            using the formula:<br />
+            \[ \text{BMI = mass / height ** 2 = mass / (height * height) (mass in kg and height in
+            meter).} \]
+        </p>
+
+        <div class="task">
+            <h3>Your tasks:</h3>
+            <ol>
+                <li>Store Mark's and John's mass and height in variables</li>
+                <li>
+                    Calculate both their BMIs using the formula (you can even implement both
+                    versions)
+                </li>
+                <li>
+                    Create a Boolean variable 'markHigherBMI' containing information about whether
+                    Mark has a higher BMI than John.
+                </li>
+            </ol>
+        </div>
+
+        <div class="test-data">
+            <h3>Test data:</h3>
+            <ul>
+                <li>
+                    Data 1: Marks weights 78 kg and is 1.69 m tall. John weights 92 kg and is 1.95 m
+                    tall.
+                </li>
+                <li>
+                    Data 2: Marks weights 95 kg and is 1.88 m tall. John weights 85 kg and is 1.76 m
+                    tall.
+                </li>
+            </ul>
+        </div>
+
+        <h3 style="color: darkblue"><i>Solution - Open console</i></h3>
 
         <script src="./script/script.js" async></script>
     </body>
